--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.0",
+    "@angular/animations": "^14.2.5",
     "@angular/cdk": "^14.2.4",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
-    "@angular/core": "^14.1.0",
+    "@angular/core": "^14.0.0",
     "@angular/forms": "^14.1.0",
-    "@angular/material": "^14.2.4",
+    "@angular/material": "^14.0.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "ngx-mat-select-search": "^5.0.0",
+    "ngx-toastr": "^15.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
