--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@tinymce/tinymce-angular": "^7.0.0",
     "ngx-mat-select-search": "^5.0.0",
     "ngx-toastr": "^15.2.0",
     "rxjs": "~7.5.0",
