--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@tinymce/tinymce-angular": "^7.0.0",
+    "ng-circle-progress": "^1.6.0",
     "ngx-mat-select-search": "^5.0.0",
     "ngx-toastr": "^15.2.0",
     "rxjs": "~7.5.0",
