--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ngx-mat-select-search": "^5.0.0",
     "ngx-toastr": "^15.2.0",
     "rxjs": "~7.5.0",
+    "safe-pipe": "^2.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
