--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.1.0",
+    "@angular/localize": "^14.0.0",
     "@angular/material": "^14.0.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@popperjs/core": "^2.10.2",
     "@tinymce/tinymce-angular": "^7.0.0",
+    "bootstrap": "^5.2.0",
     "ng-circle-progress": "^1.6.0",
     "ngx-mat-select-search": "^5.0.0",
+    "ngx-pagination": "^6.0.2",
     "ngx-toastr": "^15.2.0",
     "rxjs": "~7.5.0",
     "safe-pipe": "^2.0.2",
